--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:gravity="center_horizontal"
-    android:background="#BBDEFB">
+    android:background="#F3E5F5">
 
     <TextView
         android:id="@+id/nanodegree_apps"
