Adds material design

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,23 +1,26 @@
 <resources>
 
-    <color name="actionbar_bg_color">#6A1B9A</color>
-    <color name="actionbar_text_color">#F3E5F5</color>
+    <color name="actionbar_bg_color">#37474F</color>
+    <color name="actionbar_text_color">#fff</color>
+    <color name="color_primary_dark">#263238</color>
 
-    <style name="AppTheme" parent="@style/Theme.AppCompat.Light.DarkActionBar">
-        <item name="android:actionBarStyle">@style/PzActionBarBackground</item>
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
+        <!-- Set AppCompat’s actionBarStyle -->
+        <item name="actionBarStyle">@style/PzActionBarStyle</item>
 
-        <item name="actionBarStyle">@style/PzActionBarBackground</item>
+        <!-- colorPrimary is used for the default action bar background -->
+        <item name="colorPrimary">@color/actionbar_bg_color</item>
+        <item name="colorPrimaryDark">@color/color_primary_dark</item>
+        <item name="windowBackground">@color/color_primary_dark</item>
     </style>
 
-    <style name="PzActionBarBackground"
-        parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+    <style name="PzActionBarStyle" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
         <item name="android:background">@color/actionbar_bg_color</item>
         <item name="android:titleTextStyle">@style/PzActionBarTitleText</item>
-        <item name="android:actionMenuTextColor">@color/actionbar_text_color</item>
 
+        <!-- Support library compatibility -->
         <item name="background">@color/actionbar_bg_color</item>
         <item name="titleTextStyle">@style/PzActionBarTitleText</item>
-        <item name="actionMenuTextColor">@color/actionbar_text_color</item>
     </style>
 
     <style name="PzActionBarTitleText"
