--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:gravity="center_horizontal"
-    android:background="#F3E5F5">
+    android:background="#455A64">
 
     <TextView
         android:id="@+id/nanodegree_apps"
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:textSize="22dp"
-        android:textColor="#01579B"
+        android:textColor="#FFFFFF"
         />
 
     <Button
@@ -26,7 +26,7 @@
         android:onClick="onClickLaunchSpotifyStreamer"
         android:layout_below="@+id/nanodegree_apps"
         android:background="#F08C35"
-        android:textColor="#fff"
+        android:textColor="#FFFFFF"
         android:layout_marginBottom="6dp"
         android:layout_marginLeft="6dp"
         style="@style/Base.Widget.AppCompat.Button"
@@ -41,7 +41,7 @@
         android:onClick="onClickLaunchScores"
         android:layout_below="@+id/spotify_streamer_button"
         android:background="#F08C35"
-        android:textColor="#fff"
+        android:textColor="#FFFFFF"
         android:layout_marginBottom="6dp"
         android:layout_marginLeft="6dp"/>
 
@@ -54,7 +54,7 @@
         android:onClick="onClickLaunchLibrary"
         android:layout_below="@+id/scores_button"
         android:background="#F08C35"
-        android:textColor="#fff"
+        android:textColor="#FFFFFF"
         android:layout_marginBottom="6dp"
         android:layout_marginLeft="6dp"/>
 
@@ -67,7 +67,7 @@
         android:onClick="onClickLaunchBuildItBigger"
         android:layout_below="@+id/library_button"
         android:background="#F08C35"
-        android:textColor="#fff"
+        android:textColor="#FFFFFF"
         android:layout_marginBottom="6dp"
         android:layout_marginLeft="6dp"/>
 
@@ -80,7 +80,7 @@
         android:onClick="onClickLaunchBaconReader"
         android:layout_below="@+id/build_it_bigger_button"
         android:background="#F08C35"
-        android:textColor="#fff"
+        android:textColor="#FFFFFF"
         android:layout_marginBottom="6dp"
         android:layout_marginLeft="6dp"/>
 
