--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:textSize="22dp"
+        android:textSize="22sp"
         android:textColor="#FFFFFF"
         />
 
@@ -28,7 +28,7 @@
         android:background="#F08C35"
         android:textColor="#FFFFFF"
         android:layout_marginBottom="6dp"
-        android:layout_marginLeft="6dp"
+        android:layout_marginStart="6dp"
         style="@style/Base.Widget.AppCompat.Button"
         />
 
@@ -43,7 +43,7 @@
         android:background="#F08C35"
         android:textColor="#FFFFFF"
         android:layout_marginBottom="6dp"
-        android:layout_marginLeft="6dp"/>
+        android:layout_marginStart="6dp"/>
 
     <Button
         android:id="@+id/library_button"
@@ -56,7 +56,7 @@
         android:background="#F08C35"
         android:textColor="#FFFFFF"
         android:layout_marginBottom="6dp"
-        android:layout_marginLeft="6dp"/>
+        android:layout_marginStart="6dp"/>
 
     <Button
         android:id="@+id/build_it_bigger_button"
@@ -69,7 +69,7 @@
         android:background="#F08C35"
         android:textColor="#FFFFFF"
         android:layout_marginBottom="6dp"
-        android:layout_marginLeft="6dp"/>
+        android:layout_marginStart="6dp"/>
 
     <Button
         android:id="@+id/bacon_reader_button"
@@ -82,7 +82,7 @@
         android:background="#F08C35"
         android:textColor="#FFFFFF"
         android:layout_marginBottom="6dp"
-        android:layout_marginLeft="6dp"/>
+        android:layout_marginStart="6dp"/>
 
     <Button
         android:id="@+id/capstone_button"
@@ -94,6 +94,6 @@
         android:layout_below="@+id/bacon_reader_button"
         android:background="#B71C1C"
         android:textColor="#fff"
-        android:layout_marginLeft="6dp"/>
+        android:layout_marginStart="6dp"/>
 
 </RelativeLayout>
